<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="project.br.siga.Apiario"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="CADASTRO DE APIARIOS"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/txtcodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edt_codigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@+id/tx"
            android:layout_alignParentStart="true"
            android:editable="false">

            <requestFocus/>

        </EditText>


        <TextView android:text="@string/txtdescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txt_descricao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_descricao"
            android:layout_alignParentStart="true" >

            <requestFocus/>
        </EditText>
        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_atualizar"
                android:id="@+id/btn_atualizar"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="18px"/>

            <Button
                android:id="@+id/btn_apagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_apagar"
                android:layout_marginTop="19dp">

                <requestFocus/>
            </Button>

        </LinearLayout>




    </LinearLayout>





</RelativeLayout>


