<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Siga"

    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/lb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txt_login"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txt_senha"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_below="@+id/txt_login"
            android:layout_alignParentStart="true">

            <requestFocus/>

        </EditText>



        <TextView android:text="@string/lb_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txt_senha"
            android:layout_below="@+id/edt_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_below="@+id/txt_senha"
            android:layout_alignParentStart="true" >

            <requestFocus/>
        </EditText>
        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_entrar"
                android:id="@+id/btn_entrar"
                android:layout_below="@+id/edt_password"
                android:layout_toStartOf="@+id/txt_senha"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="0px"
                android:layout_marginRight="10dp" />



            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_cancelar"
                android:layout_alignTop="@+id/button"
                android:layout_toEndOf="@+id/txt_login"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="35dp">

                <requestFocus/>
            </Button>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="48px"
        android:layout_height="48px"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginEnd="138dp"
        android:layout_marginTop="52dp"

        />


</RelativeLayout>

